--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -10,12 +10,14 @@
     "@types/react-router": "^5.1.4",
     "axios": "^0.19.2",
     "babel-eslint": "10.1.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
     "node-sass": "^4.13.1",
     "oidc-client": "^1.10.1",
+    "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-player": "^2.4.0",
     "react-router-bootstrap": "^0.25.0",
